// https://docs.gradle.org/current/userguide/custom_plugins.html
apply plugin: 'kotlin'
apply plugin: 'groovy' // for dsl tests

group = 'org.greenrobot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

def genResourcesDir = new File(buildDir, 'src/generated/resources')
def versionFile = new File(genResourcesDir, 'org/greenrobot/greendao/gradle/version.properties')

sourceSets {
    main {
        resources {
            srcDir genResourcesDir
        }
    }
}

dependencies {
    implementation gradleApi()
    implementation project(':greendao-code-modifier')
    compileOnly 'com.android.tools.build:gradle:9.2.1'

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-all:1.10.19'
}

// puts artifact version to properties file inside resources
task generateVersionProperties {
    inputs.property 'version', project.version
    outputs.file versionFile

    doLast {
        versionFile.parentFile.mkdirs()
        versionFile.withWriter {
            it.write """# Generated by gradle task generateVersionProperties
version=${project.version}
"""
        }
    }
}

tasks.named('compileKotlin') { dependsOn generateVersionProperties }
tasks.named('processResources') { dependsOn generateVersionProperties }

tasks.withType(Test).configureEach {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED',
            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
}

apply from: rootProject.file("gradle/publish.gradle")
